# matiocpp

./: .gitignore  CMakeLists.txt  README.md  makefile  matio.cpp  matio.hpp  matiocpp.pc  matiotest.cpp
src/: matio.cpp  matiotest.cpp
swig/: makefile  matio.i
swig/i_csharp/: matio.csproj
swig/i_python/: test.py
